--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</head>
 
 	<body>
-		<ol style="color: white">
+		<!-- <ol style="color: white">
 			<li>
 				Read the
 				<a
@@ -62,7 +62,7 @@
 			</li>
 			<li>Delete this list from <code>index.html</code>.</li>
 			<li>Good luck, you got this!</li>
-		</ol>
+		</ol> -->
 		<script type="module" src="./src/main.js"></script>
 	</body>
 </html>
